--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <p><strong>Node.js</strong> - Node.js é um software de código aberto, multiplataforma, baseado no interpretador V8 do Google e que permite a execução de códigos JavaScript fora de um navegador web.</p><br>
         <p>Site do download: <a href="https://nodejs.org/en/download/" target="_blank">https://nodejs.org/en/download/</a></p><br>
         <p>Tutorial de como baixar: <a href="https://www.youtube.com/watch?v=65gksI59EIY&t=181s&ab_channel=ProgramadorViking" target="_blank">https://www.youtube.com/watch?v=65gksI59EIY&t=181s&ab_channel=ProgramadorViking</a></p><br>
-        <p><span>IMPORTANTE</span>: Para verificarmos se o node foi instalado corretamente, devemos abrir o CMD (Prompt de Comando, caso você esteja usando Windows) e digitar o comando node -v e teclar Enter. Caso apareça a versão, é sinal que deu tudo certo.</p><br>
+        <p><span>IMPORTANTE</span>: Para verificarmos se o node foi instalado corretamente, devemos abrir o CMD (Prompt de Comando, caso você esteja usando Windows) e digitar o comando <span>node -v</span> e teclar Enter. Caso apareça a versão, é sinal que deu tudo certo.</p><br>
         <p><img src="img/cap01/img_1.png" alt="Imagem"></p><br>
         <p><strong>O que devo saber para usar o React ?</strong></p><br>
         <p>É recomendável ter uma noção básica de Html, Css e JavaScript. Caso não possua tais conhecimentos, deixaremos links de textos e vídeos a respeito dos assuntos de Html, Css e JavaScript que serão necessários para o entendimento da biblioteca React.</p><br>
@@ -69,12 +69,12 @@
         <p>Primeiramente iremos criar uma pasta na área de trabalho (Desktop).</p><br>
         <p><img src="img/cap01/img_2.png" alt="Imagem"></p><br>
         <p>Em seguida abriremos o CMD (Prompt de Comando) e digitaremos alguns comandos.</p><br>
-        <p>O comando cd no CMD do Windows serve para entrar em pastas. Usaremos esse comando para entrar na pasta React que se encontra no Desktop.</p><br>
+        <p>O comando <span>cd</span> no CMD do Windows serve para entrar em pastas. Usaremos esse comando para entrar na pasta React que se encontra no Desktop.</p><br>
         <p>Quando abrimos o CMD a pasta que inicia é a do usuário. Nesse caso a pasta rosiv.</p><br>
         <p><img src="img/cap01/img_3.png" alt="Imagem"></p><br>
-        <p>O primeiro comando que devemos digitar é o cd Desktop, para irmos para o Desktop.</p><br>
+        <p>O primeiro comando que devemos digitar é o <span>cd Desktop</span>, para irmos para o Desktop.</p><br>
         <p><img src="img/cap01/img_4.png" alt="Imagem"></p><br>
-        <p>Agora dentro do Desktop temos a pasta React. Para irmos para ela digitaremos cd React.</p><br>
+        <p>Agora dentro do Desktop temos a pasta React. Para irmos para ela digitaremos <span>cd React</span>.</p><br>
         <p><img src="img/cap01/img_5.png" alt="Imagem"></p><br>
         <p>Agora sim estamos dentro da pasta React que se encontra no Desktop do Windows.</p><br>
         <p>Podemos criar um App React de diversas formas, todos os comandos a seguir são válidos. Vai depender do seu objetivo.</p><br>
@@ -84,19 +84,19 @@
         <p>yarn create vite nome-app</p><br>
         <p>Optaremos pelo comando <span>npm create vite@latest nome-app</span>. O projeto será criado dentro da pasta React.</p><br>
         <p><img src="img/cap01/img_6.png" alt="Imagem"></p><br>
-        <p>O comando nos pede para selecionarmos o framework que iremos usar. No nosso caso devemos selecionar o react e teclar Enter.</p><br>
+        <p>O comando nos pede para selecionarmos o <span>framework</span> que iremos usar. No nosso caso devemos selecionar o react e teclar Enter.</p><br>
         <p><img src="img/cap01/img_7.png" alt="Imagem"></p><br>
         <p>Em seguida aparecem duas variantes, o react puro ou com typescript. Iremos escolher o react puro.</p><br>
         <p><img src="img/cap01/img_8.png" alt="Imagem"></p><br>
-        <p>Logo abaixo temos a instalação já pronta. O próximo passo é abrirmos a pasta react-leigos no VSCode.</p><br>
+        <p>Logo abaixo temos a instalação já pronta. O próximo passo é abrirmos a pasta <span>react-leigos</span> no VSCode.</p><br>
         <p><img src="img/cap01/img_9.png" alt="Imagem"></p><br>
         <p>Ao abrirmos o VSCode, devemos ir no menu superior em Arquivo e clicar em Abrir Pasta.</p><br>
         <p><img src="img/cap01/img_10.png" alt="Imagem"></p><br>
-        <p>Em seguida selecionar a pasta react-leigos e clicar em Selecionar pasta.</p><br>
+        <p>Em seguida selecionar a pasta <span>react-leigos</span> e clicar em Selecionar pasta.</p><br>
         <p><img src="img/cap01/img_11.png" alt="Imagem"></p><br>
         <p>O programa terá a seguinte aparência:</p><br>
         <p><img src="img/cap01/img_12.png" alt="Imagem"></p><br>
-        <p>Tem outra forma de abrir a pasta react-leigos. Clicando com o botão direito do mouse na pasta react-leigos e escolhendo Abrir com Code.</p><br>
+        <p>Tem outra forma de abrir a pasta <span>react-leigos</span>. Clicando com o botão direito do mouse na pasta <span>react-leigos</span> e escolhendo <span>Abrir com Code</span>.</p><br>
         <p><img src="img/cap01/img_13.png" alt="Imagem"></p><br>
         <p>Com o programa aberto devemos usar o Terminal do próprio VSCode, pois precisamos digitar o comando npm install ou npm i para carregar as dependências. As dependências são alguns arquivos de configuração, mas falaremos disso só depois para não dificultar o entendimento.</p><br>
         <p>Para abrir o Terminal do VSCode usamos o atalho Ctrl + ' (Control mais Aspas Simples) ou no menu superior clicamos em Ver seguido de Terminal.</p><br>
