--- a/index.html
+++ b/index.html
@@ -98,19 +98,19 @@
         <p><img src="img/cap01/img_12.png" alt="Imagem"></p><br>
         <p>Tem outra forma de abrir a pasta <span>react-leigos</span>. Clicando com o botão direito do mouse na pasta <span>react-leigos</span> e escolhendo <span>Abrir com Code</span>.</p><br>
         <p><img src="img/cap01/img_13.png" alt="Imagem"></p><br>
-        <p>Com o programa aberto devemos usar o Terminal do próprio VSCode, pois precisamos digitar o comando npm install ou npm i para carregar as dependências. As dependências são alguns arquivos de configuração, mas falaremos disso só depois para não dificultar o entendimento.</p><br>
-        <p>Para abrir o Terminal do VSCode usamos o atalho Ctrl + ' (Control mais Aspas Simples) ou no menu superior clicamos em Ver seguido de Terminal.</p><br>
+        <p>Com o programa aberto devemos usar o Terminal do próprio VSCode, pois precisamos digitar o comando <span>npm install</span> ou <span>npm i</span> para carregar as dependências. As dependências são alguns arquivos de configuração, mas falaremos disso só depois para não dificultar o entendimento.</p><br>
+        <p>Para abrir o Terminal do VSCode usamos o atalho <span>Ctrl + '</span> (Control mais Aspas Simples) ou no menu superior clicamos em <span>Ver</span> seguido de Terminal.</p><br>
         <p><img src="img/cap01/img_14.png" alt="Imagem"></p><br>
-        <p>Com o terminal aberto digitamos o comando npm i.</p><br>
+        <p>Com o terminal aberto digitamos o comando <span>npm i</span>.</p><br>
         <p><img src="img/cap01/img_15.png" alt="Imagem"></p><br>
         <p>Será feito o download de alguns arquivos:</p><br>
         <p><img src="img/cap01/img_16.png" alt="Imagem"></p><br>
-        <p>No lado esquerdo do programa temos diversos arquivos e pastas, porém por enquanto iremos ver apenas os arquivos App.jsx, App.css e o index.css. Não se preocupe com os outros arquivos e pastas, mais na frente iremos ver cada um deles.</p><br>
-        <p>O App.jsx é onde fica a parte visível do App que será mostrado no navegador. O App.css é onde escrevemos o css do arquivo App.jsx. O index.css é onde escrevemos o css global do projeto.</p><br>
+        <p>No lado esquerdo do programa temos diversos arquivos e pastas, porém por enquanto iremos ver apenas os arquivos <span>App.jsx</span>, <span>App.css</span> e o <span>index.css</span>. Não se preocupe com os outros arquivos e pastas, mais na frente iremos ver cada um deles.</p><br>
+        <p>O <span>App.jsx</span> é onde fica a parte visível do App que será mostrado no navegador. O <span>App.css</span> é onde escrevemos o <span>css</span> do arquivo <span>App.jsx</span>. O <span>index.css</span> é onde escrevemos o <span>css global</span> do projeto.</p><br>
         <p><img src="img/cap01/img_17.png" alt="Imagem"></p><br>
-        <p>Dentro do App.jsx iremos apagar tudo que veio escrito como padrão e escreveremos a estrutura abaixo. Os comandos abaixo são o padrão de um componente. Iremos escrever as tags dentro do return. Perceba que a estrutura abaixo é um função que pode ser exportada.</p><br>
+        <p>Dentro do <span>App.jsx</span> iremos apagar tudo que veio escrito como padrão e escreveremos a estrutura abaixo. Os comandos abaixo são o padrão de um componente. Iremos escrever as tags dentro do <span>return</span>. Perceba que a estrutura abaixo é um função que pode ser exportada.</p><br>
         <p><img src="img/cap01/img_18.png" alt="Imagem"></p><br>
-        <p>Para visualizarmos o App no navegador devemos escrever no Terminal npm run dev. Para abrir o App no navegador podemos copiar o link http://localhost:3000/ e colar no navegador ou podemos segurar a tecla Ctrl e clicar no link.</p><br>
+        <p>Para visualizarmos o App no navegador devemos escrever no Terminal <span>npm run dev</span>. Para abrir o App no navegador podemos copiar o link http://localhost:3000/ e colar no navegador ou podemos segurar a tecla Ctrl e clicar no link.</p><br>
         <p><img src="img/cap01/img_19.png" alt="Imagem"></p><br>
         <p>No navegador teremos a seguinte aparência:</p><br>
         <p><img src="img/cap01/img_20.png" alt="Imagem"></p><br>
