--- a/index.html
+++ b/index.html
@@ -110,31 +110,31 @@
         <p><img src="img/cap01/img_17.png" alt="Imagem"></p><br>
         <p>Dentro do <span>App.jsx</span> iremos apagar tudo que veio escrito como padrão e escreveremos a estrutura abaixo. Os comandos abaixo são o padrão de um componente. Iremos escrever as tags dentro do <span>return</span>. Perceba que a estrutura abaixo é um função que pode ser exportada.</p><br>
         <p><img src="img/cap01/img_18.png" alt="Imagem"></p><br>
-        <p>Para visualizarmos o App no navegador devemos escrever no Terminal <span>npm run dev</span>. Para abrir o App no navegador podemos copiar o link http://localhost:3000/ e colar no navegador ou podemos segurar a tecla Ctrl e clicar no link.</p><br>
+        <p>Para visualizarmos o App no navegador devemos escrever no Terminal <span>npm run dev</span>. Para abrir o App no navegador podemos copiar o link <span>http://localhost:3000/</span> e colar no navegador ou podemos segurar a tecla <span>Ctrl</span> e clicar no link.</p><br>
         <p><img src="img/cap01/img_19.png" alt="Imagem"></p><br>
         <p>No navegador teremos a seguinte aparência:</p><br>
         <p><img src="img/cap01/img_20.png" alt="Imagem"></p><br>
-        <p>Iremos adicionar alguns parágrafos no App.jsx e veremos como o navegador será alterado.</p><br>
+        <p>Iremos adicionar alguns parágrafos no <span>App.jsx</span> e veremos como o navegador será alterado.</p><br>
         <p><img src="img/cap01/img_21.png" alt="Imagem"></p><br>
         <p>Foi adicionado 2 parágrafos abaixo do h1 e notamos um erro no App. Qual o motivo desse erro ?</p><br>
-        <p>Dentro do return temos que ter apenas uma tag. Nesse caso temos 3 tags, o h1 e dois parágrafos. Para resolver isso podemos colocar essas 3 tags dentro de uma div.</p><br>
+        <p>Dentro do <span>return</span> temos que ter apenas uma tag. Nesse caso temos 3 tags, o h1 e dois parágrafos. Para resolver isso podemos colocar essas 3 tags dentro de uma <span>div</span>.</p><br>
         <p><img src="img/cap01/img_22.png" alt="Imagem"></p><br>
         <p>E o erro sumiu. Ou seja, todo o nosso App será feito dentro dessa div. No navegador teremos a seguinte tela:</p><br>
         <p><img src="img/cap01/img_23.png" alt="Imagem"></p><br>
-        <p>Agora veremos o arquivo index.css que é responsável pelo css (design) global do App. Primeiro temos o seletor asterisco ( * ) que corresponde a todos os elementos do documento. Temos também o seletor body que corresponde ao elemento body no Html.</p><br>
+        <p>Agora veremos o arquivo <span>index.css</span> que é responsável pelo css (design) global do App. Primeiro temos o seletor asterisco ( * ) que corresponde a todos os elementos do documento. Temos também o seletor body que corresponde ao elemento body no Html.</p><br>
         <p><img src="img/cap01/img_24.png" alt="Imagem"></p><br>
-        <p>Ao abrirmos no App no navegador através do comando npm run dev, teremos a seguinte tela:</p><br>
+        <p>Ao abrirmos no App no navegador através do comando <span>npm run dev</span>, teremos a seguinte tela:</p><br>
         <p><img src="img/cap01/img_25.png" alt="Imagem"></p><br>
         <p>Note as mudanças de background, margin, padding e fonte-family.</p><br>
-        <p>Agora veremos o arquivo App.css que é responsável pelo css do App. Para usarmos o css apenas no App, devemos importar o arquivo da seguinte forma:</p><br>
+        <p>Agora veremos o arquivo <span>App.css</span> que é responsável pelo css do App. Para usarmos o css apenas no App, devemos importar o arquivo da seguinte forma:</p><br>
         <p><img src="img/cap01/img_26.png" alt="Imagem"></p><br>
-        <p>Dentro da tag div iremos colocar uma classe para referenciarmos a div no App.css. Em React usamos o className para fazermos uma referência a tag, já em JavaScript usamos apenas o class.</p><br>
+        <p>Dentro da tag div iremos colocar uma classe para referenciarmos a div no <span>App.css</span>. Em React usamos o <span>className</span> para fazermos uma referência a tag, já em JavaScript usamos apenas o <span>class</span>.</p><br>
         <p><img src="img/cap01/img_27.png" alt="Imagem"></p><br>
-        <p>Agora sim podemos trabalhar os estilos dentro do App.css.</p><br>
+        <p>Agora sim podemos trabalhar os estilos dentro do <span>App.css</span>.</p><br>
         <p><img src="img/cap01/img_28.png" alt="Imagem"></p><br>
         <p>E o resultado no navegador ficou da seguinte forma:</p><br>
         <p><img src="img/cap01/img_29.png" alt="Imagem"></p><br>
-        <p>Perceba a diferença entre trabalhar os estilos globais no index.css e os estilos do App no App.css.</p><br><br>
+        <p>Perceba a diferença entre trabalhar os estilos globais no <span>index.css</span> e os estilos do App no <span>App.css</span>.</p><br><br>
         <div id="voltar-topo">
             <a href="#sumario">Voltar p/ o Topo</a>
         </div><br><br>
