--- a/cap2.html
+++ b/cap2.html
@@ -17,22 +17,22 @@
         <h2>Componentes</h2>
         <p>Quando nós falamos em React, um dos principais e mais poderosos conceitos da biblioteca está na criação de componentes.</p><br>
         <p>O componente é como se fosse um bloco que tem uma determinada função e aparência.</p><br>
-        <p>Geralmente os componentes ficam dentro de uma pasta chamada components e são criadas dentro da pasta src.</p><br>
+        <p>Geralmente os componentes ficam dentro de uma pasta chamada components e são criadas dentro da pasta <span>src</span>.</p><br>
         <p><img src="img/cap02/img_1.png" alt="Imagem"></p><br>
-        <p>Dentro da pasta components criamos o nosso primeiro componente chamado PrimeiroComponente.jsx.</p><br>
+        <p>Dentro da pasta <span>components</span> criamos o nosso primeiro componente chamado <span>PrimeiroComponente.jsx</span>.</p><br>
         <p><img src="img/cap02/img_2.png" alt="Imagem"></p><br>
-        <p>A escrita de um componente nada mais é que uma função e se assemelha ao App.jsx. O export default no inicio é necessário para podermos importar e usar dentro do App.jsx ou de outros componentes. Podemos usar componentes dentro de outros componentes. Note que dentro de return não usamos a div, pois temos apenas um elemento pai. Caso tivessemos dois ou mais elementos deveriamos colocar todos dentro de uma div, pois dentro do return é obrigatório o uso de apenas um elemento pai (tag html).</p><br>
+        <p>A escrita de um componente nada mais é que uma função e se assemelha ao <span>App.jsx</span>. O <span>export default</span> no inicio é necessário para podermos importar e usar dentro do <span>App.jsx</span> ou de outros componentes. Podemos usar componentes dentro de outros componentes. Note que dentro de <span>return</span> não usamos a <span>div</span>, pois temos apenas um elemento pai. Caso tivessemos dois ou mais elementos deveriamos colocar todos dentro de uma <span>div</span>, pois dentro do <span>return</span> é obrigatório o uso de apenas um elemento pai (tag html).</p><br>
         <p><img src="img/cap02/img_3.png" alt="Imagem"></p><br>
-        <p>Para usarmos o componente criado devemos importá-lo dentro do App.jsx. E para usarmos de fato escreveremos como se fosse uma tag html.</p><br>
+        <p>Para usarmos o componente criado devemos importá-lo dentro do <span>App.jsx</span>. E para usarmos de fato escreveremos como se fosse uma tag html.</p><br>
         <p><strong>&#60;PrimeiroComponente &#47;&#62;</strong></p><br>
         <p><img src="img/cap02/img_4.png" alt="Imagem"></p><br>
         <p>No navegador teremos a seguinte aparência:</p><br>
         <p><img src="img/cap02/img_5.png" alt="Imagem"></p><br>
         <p>Também é possível usar um componente dentro de outro componente. Para exemplificar criaremos outro componente.</p><br>
         <p><img src="img/cap02/img_6.png" alt="Imagem"></p><br>
-        <p>Com o SegundoComponente criado, iremos importá-lo dentro do PrimeiroComponente. Usamos SegundoComponente como uma tag html logo abaixo do h1. Note que dentro do return podemos ter apenas um elemento pai (tag html), então fizemos uso da tag div.</p><br>
+        <p>Com o <span>SegundoComponente</span> criado, iremos importá-lo dentro do <span>PrimeiroComponente</span>. Usamos <span>SegundoComponente</span> como uma tag html logo abaixo do h1. Note que dentro do <span>return</span> podemos ter apenas um elemento pai (tag html), então fizemos uso da tag <span>div</span>.</p><br>
         <p><img src="img/cap02/img_7.png" alt="Imagem"></p><br>
-        <p>Perceba que não alteramos nada dentro do arquivo App.jsx.</p><br>
+        <p>Perceba que não alteramos nada dentro do arquivo <span>App.jsx</span>.</p><br>
         <p><img src="img/cap02/img_8.png" alt="Imagem"></p><br>
         <p>Agora veja a tela no navegador:</p><br>
         <p><img src="img/cap02/img_9.png" alt="Imagem"></p><br><br>
