--- a/cap2.html
+++ b/cap2.html
@@ -17,7 +17,7 @@
         <h2>Componentes</h2>
         <p>Quando nós falamos em React, um dos principais e mais poderosos conceitos da biblioteca está na criação de componentes.</p><br>
         <p>O componente é como se fosse um bloco que tem uma determinada função e aparência.</p><br>
-        <p>Geralmente os componentes ficam dentro de uma pasta chamada components e são criadas dentro da pasta <span>src</span>.</p><br>
+        <p>Geralmente os componentes ficam dentro de uma pasta chamada <span>components</span> e são criadas dentro da pasta <span>src</span>.</p><br>
         <p><img src="img/cap02/img_1.png" alt="Imagem"></p><br>
         <p>Dentro da pasta <span>components</span> criamos o nosso primeiro componente chamado <span>PrimeiroComponente.jsx</span>.</p><br>
         <p><img src="img/cap02/img_2.png" alt="Imagem"></p><br>
