--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         <p>Ao abrirmos no App no navegador através do comando <span>npm run dev</span>, teremos a seguinte tela:</p><br>
         <p><img src="img/cap01/img_25.png" alt="Imagem"></p><br>
         <p>Note as mudanças de background, margin, padding e fonte-family.</p><br>
-        <p>Agora veremos o arquivo <span>App.css</span> que é responsável pelo css do App. Para usarmos o css apenas no App, devemos importar o arquivo da seguinte forma:</p><br>
+        <p>Agora veremos o arquivo <span>App.css</span> que é responsável pelo css do arquivo <span>App.jsx</span>. Para usarmos o css apenas no arquivo <span>App.jsx</span>, devemos importar o arquivo da seguinte forma:</p><br>
         <p><img src="img/cap01/img_26.png" alt="Imagem"></p><br>
         <p>Dentro da tag div iremos colocar uma classe para referenciarmos a div no <span>App.css</span>. Em React usamos o <span>className</span> para fazermos uma referência a tag, já em JavaScript usamos apenas o <span>class</span>.</p><br>
         <p><img src="img/cap01/img_27.png" alt="Imagem"></p><br>
