--- a/cap3.html
+++ b/cap3.html
@@ -18,8 +18,8 @@
         <p>Criado pela equipe de desenvolvimento do React, o JSX é uma forma de criar elementos para serem utilizados nas aplicações React. Basicamente, os elementos criados com o JSX são bem similares com código HTML e fornecem aos desenvolvedores uma forma mais simples e intuitiva de criar os componentes de uma aplicação.</p><br>
         <p>Como dito anteriormente, o JSX possui uma sintaxe muito semelhante ao HTML. O código abaixo demonstra claramente esta característica. Apesar de muito parecido, o código a seguir não é HTML e sim um trecho de código JSX.</p><br>
         <p><img src="img/cap03/img_1.png" alt="Imagem"></p><br>
-        <p>No projeto que estamos trabalhando, tinhamos um outro componente porém resolvemos excluir para não causar confusão, pois agora iremos trabalhar apenas com o componente PrimeiroComponente.</p><br>
-        <p>No código acima, dentro do arquivo PrimeiroComponente.jsx, criamos uma variável lista que recebe uma lista (ul) dentro. Dentro do return fazemos uso dessa variável dentro das chaves { }. Note algumas características da sintaxe JSX, como o uso dos parênteses na declaração da variável lista e o uso das chaves { } para usarmos a variável dentro do return.</p><br>
+        <p>No projeto que estamos trabalhando, tinhamos um outro componente porém resolvemos excluir para não causar confusão, pois agora iremos trabalhar apenas com o componente <span>PrimeiroComponente</span>.</p><br>
+        <p>No código acima, dentro do arquivo <span>PrimeiroComponente.jsx</span>, criamos uma variável <span>lista</span> que recebe uma lista (ul) dentro. Dentro do <span>return</span> fazemos uso dessa variável dentro das chaves { }. Note algumas características da sintaxe JSX, como o uso dos parênteses na declaração da variável <span>lista</span> e o uso das chaves { } para usarmos a variável dentro do <span>return</span>.</p><br>
         <p>O resultado desse código no navegador é o seguinte:</p><br>
         <p><img src="img/cap03/img_2.png" alt="Imagem"></p><br>
         <p>Outro exemplo do uso do JSX:</p><br>
@@ -34,7 +34,7 @@
         <p><img src="img/cap03/img_7.png" alt="Imagem"></p><br>
         <p>No navegador teremos:</p><br>
         <p><img src="img/cap03/img_8.png" alt="Imagem"></p><br>
-        <p>Perceba que até agora não alteramos nada dentro do arquivo App.jsx, só estamos trabalhando dentro do arquivo PrimeiroComponente.jsx.</p><br>
+        <p>Perceba que até agora não alteramos nada dentro do arquivo <span>App.jsx</span>, só estamos trabalhando dentro do arquivo <span>PrimeiroComponente.jsx</span>.</p><br>
         <p><img src="img/cap03/img_9.png" alt="Imagem"></p><br>
         <p>Outro exemplo com JSX:</p><br>
         <p><img src="img/cap03/img_10.png" alt="Imagem"></p><br>
@@ -44,9 +44,9 @@
         <p><img src="img/cap03/img_12.png" alt="Imagem"></p><br>
         <p>No navegador teremos:</p><br>
         <p><img src="img/cap03/img_13.png" alt="Imagem"></p><br>
-        <p>No Html a sintaxe de class é da seguinte forma:</p><br>
+        <p>No Html a sintaxe de <span>class</span> é da seguinte forma:</p><br>
         <p><img src="img/cap03/img_14.png" alt="Imagem"></p><br>
-        <p>No JSX é diferente, a sintaxe fica className.</p><br>
+        <p>No JSX é diferente, a sintaxe fica <span>className</span>.</p><br>
         <p><img src="img/cap03/img_15.png" alt="Imagem"></p><br><br>
         <div id="voltar-topo">
             <a href="#div">Voltar p/ o Topo</a>
