--- a/cap4.html
+++ b/cap4.html
@@ -15,7 +15,7 @@
             <a href="index.html">Voltar p/ Página Inicial</a>
         </div>
         <h2>Eventos de Click</h2>
-        <p>O exemplo mais básico de um evento de click é quando clicamos em um botão e algo é realizado. Temos diversos tipos de eventos, o onClick é apenas um deles. Então executaremos uma função quando o botão for clicado. Perceba a sintaxe de onClick, ela está inserida dentro da tag button e caso seja acionada a função handleClick será executada.</p><br>
+        <p>O exemplo mais básico de um evento de click é quando clicamos em um botão e algo é realizado. Temos diversos tipos de eventos, o <span>onClick</span> é apenas um deles. Então executaremos uma função quando o botão for clicado. Perceba a sintaxe de <span>onClick</span>, ela está inserida dentro da tag <span>button</span> e caso seja acionada a função <span>handleClick</span> será executada.</p><br>
         <p><img src="img/cap04/img_1.png" alt="Imagem"></p><br>
         <p>No navegador teremos:</p><br>
         <p><img src="img/cap04/img_2.png" alt="Imagem"></p><br>
