--- a/cap5.html
+++ b/cap5.html
@@ -16,15 +16,15 @@
         </div>
         <h2>Trabalhando com Imagens</h2>
         <p><img src="img/cap05/img_1.png" alt="Imagem"></p><br>
-        <p>Como colocar uma imagem no arquivo App.jsx ?</p><br>
-        <p>Geralmente as imagens são organizadas dentro de uma pasta chamada assets. Essa pasta é criada dentro do src.</p><br>
+        <p>Como colocar uma imagem no arquivo <span>App.jsx</span> ?</p><br>
+        <p>Geralmente as imagens são organizadas dentro de uma pasta chamada <span>assets</span>. Essa pasta é criada dentro do <span>src</span>.</p><br>
         <p><img src="img/cap05/img_2.png" alt="Imagem"></p><br>
-        <p>Criaremos um componente chamado Images.jsx para trabalharmos no nosso exemplo. Primeiramente dentro do nosso componente, devemos importar o arquivo. No nosso import damos um "apelido" de Imagem. Dentro das aspas fica o caminho até a imagem.</p><br>
-        <p>Como estamos dentro do arquivo Images.jsx, temos que fazer o caminho até a imagem que iremos usar. Os dois pontos ( .. ) significa voltar a pasta anterior, ou seja, saimos da pasta components e fomos para a pasta src. Em seguida entramos na pasta assets e por fim acessamos a imagem.</p><br>
+        <p>Criaremos um componente chamado <span>Images.jsx</span> para trabalharmos no nosso exemplo. Primeiramente dentro do nosso componente, devemos importar o arquivo. No nosso import damos um "apelido" de <span>Imagem</span>. Dentro das aspas fica o caminho até a imagem.</p><br>
+        <p>Como estamos dentro do arquivo <span>Images.jsx</span>, temos que fazer o caminho até a imagem que iremos usar. Os dois pontos ( .. ) significa voltar a pasta anterior, ou seja, saimos da pasta <span>components</span> e fomos para a pasta <span>src</span>. Em seguida entramos na pasta <span>assets</span> e por fim acessamos a imagem.</p><br>
         <p><img src="img/cap05/img_3.png" alt="Imagem"></p><br>
         <p><img src="img/cap05/img_4.png" alt="Imagem"></p><br>
-        <p>Note que na tag img o src recebe as chaves com o apelido Imagem que demos no import acima.</p><br>
-        <p>O arquivo Images.jsx foi importado no arquivo App.jsx e usado como uma tag html dentro do <span>return</span>.</p><br>
+        <p>Note que na tag <span>img</span> o <span>src</span> recebe as chaves com o apelido <span>Imagem</span> que demos no import acima.</p><br>
+        <p>O arquivo <span>Images.jsx</span> foi importado no arquivo <span>App.jsx</span> e usado como uma tag html dentro do <span>return</span>.</p><br>
         <p><img src="img/cap05/img_6.png" alt="Imagem"></p><br>
         <p>E no navegador temos a seguinte aparência:</p><br>
         <p><img src="img/cap05/img_5.png" alt="Imagem"></p><br><br>
