--- a/cap6.html
+++ b/cap6.html
@@ -15,17 +15,17 @@
             <a href="index.html">Voltar p/ Página Inicial</a>
         </div>
         <h2>CSS nos Componentes</h2>
-        <p>Na introdução vimos como aplicar o css no index.css para estilizar de forma global. Também aplicamos o css no arquivo App.css para configurar os estilos do App.jsx.</p><br>
+        <p>Na introdução vimos como aplicar o css no <span>index.css</span> para estilizar de forma global. Também trabalhamos o css no arquivo <span>App.css</span> para configurar os estilos do <span>App.jsx</span>.</p><br>
         <p>É necessário estilizar cada componente para mantermos a organização do projeto e facilitar a compreensão do mesmo.</p><br>
-        <p>Então criaremos o arquivo NomeComponente.module.css e o chamaremos dentro do componente.</p><br>
+        <p>Então criaremos o arquivo <span>NomeComponente.module.css</span> e o chamaremos dentro do componente.</p><br>
         <p><img src="img/cap06/img_1.png" alt="Imagem"></p><br>
         <p><img src="img/cap06/img_2.png" alt="Imagem"></p><br>
-        <p>Dentro do arquivo PrimeiroComponente.module.css é onde teremos o css das classes. Para aplicarmos o css criado devemos importar o PrimeiroComponente.module.css dentro do componente PrimeiroComponente.jsx. E para usarmos de fato, devemos referenciar os estilos criados através do className.</p><br>
+        <p>Dentro do arquivo <span>PrimeiroComponente.module.css</span> é onde teremos o css das classes. Para aplicarmos o css criado devemos importar o <span>PrimeiroComponente.module.css</span> dentro do componente <span>PrimeiroComponente.jsx</span>. E para usarmos de fato, devemos referenciar os estilos criados através do <span>className</span>.</p><br>
         <p><img src="img/cap06/img_3.png" alt="Imagem"></p><br>
-        <p>Ao executarmos o projeto no navegador através do comando no Terminal npm run dev, teremos a seguinte aparência:</p><br>
+        <p>Ao executarmos o projeto no navegador através do comando no Terminal <span>npm run dev</span>, teremos a seguinte aparência:</p><br>
         <p><img src="img/cap06/img_4.png" alt="Imagem"></p><br>
-        <p>Perceba que somente foram estilizados a div e o h1 que estão inseridos no PrimeiroComponente.jsx.</p><br>
-        <p>O arquivo App.jsx se encontra da seguinte forma:</p><br>
+        <p>Perceba que somente foram estilizados a div e o h1 que estão inseridos no <span>PrimeiroComponente.jsx</span>.</p><br>
+        <p>O arquivo <span>App.jsx</span> se encontra da seguinte forma:</p><br>
         <p><img src="img/cap06/img_5.png" alt="Imagem"></p><br><br>
         <div id="voltar-topo">
             <a href="#div">Voltar p/ o Topo</a>
