--- a/cap7.html
+++ b/cap7.html
@@ -17,7 +17,7 @@
         <h2>Fragments</h2>
         <p>O conceito de Fragments nos permite criar um componente sem elemento pai.</p><br>
         <p>A sua sintaxe é: &lt;&gt; &lt;&frasl;&gt;</p><br>
-        <p>O seu propósito é simplificar o código. Lembre-se que dentro do <span>return</span> somos obrigados a ter apenas um elemento pai, geralmente usamos a tag <span>div</span>. Para fazermos o uso dos Fragments trocaremos essa <span>div</span> pelos Fragments.</p><br>
+        <p>O seu propósito é simplificar o código e podermos usar quantas tags quisermos dentro do <span>return</span>. Lembre-se que dentro do <span>return</span> somos obrigados a ter apenas um elemento pai, geralmente usamos a tag <span>div</span>. Para fazermos o uso dos Fragments trocaremos essa <span>div</span> pelos Fragments.</p><br>
         <p><img src="img/cap07/img_1.png" alt="Imagem"></p><br>
         <p>O arquivo <span>App.jsx</span> permace da seguinte forma:</p><br>
         <p><img src="img/cap07/img_2.png" alt="Imagem"></p><br>
