--- a/cap8.html
+++ b/cap8.html
@@ -16,11 +16,11 @@
         </div>
         <h2>Renderização Condicional</h2>
         <p>Renderização condicional em React funciona da mesma forma que condições funcionam em JavaScript.</p><br>
-        <p>No exemplo abaixo declaramos antes de return uma constante com o valor 10. Dentro das chaves temos a nossa condição. O && verifica se a condição é verdadeira ou falsa. Caso seja verdadeira, o que vier depois será executado. Caso a condição seja falsa, não será executado nada. É um if sem o else.</p><br>
+        <p>No exemplo abaixo declaramos antes de <span>return</span> uma constante com o valor 10. Dentro das chaves temos a nossa condição. O <span>&&</span> verifica se a condição é verdadeira ou falsa. Caso seja verdadeira, o que vier depois será executado. Caso a condição seja falsa, não será executado nada. É um if sem o else.</p><br>
         <p><img src="img/cap08/img_1.png" alt="Imagem"></p><br>
         <p>No navegador teremos:</p><br>
         <p><img src="img/cap08/img_2.png" alt="Imagem"></p><br>
-        <p>Também temos o uso do if ternário:</p><br>
+        <p>Também temos o uso do <span>if ternário</span>:</p><br>
         <p><img src="img/cap08/img_3.png" alt="Imagem"></p><br>
         <p>No navegador teremos:</p><br>
         <p><img src="img/cap08/img_4.png" alt="Imagem"></p><br><br>
