--- a/cap9.html
+++ b/cap9.html
@@ -15,24 +15,24 @@
             <a href="index.html">Voltar p/ Página Inicial</a>
         </div>
         <h2>Renderização de Listas</h2>
-        <p>Para renderizar uma lista vamos precisar de um array e do método map( ) para percorrer cada elemento da lista. Pode ser um array de número, de strings ou de objetos.</p><br>
-        <p>Primeiramente iremos revisar o método map( ). Podemos percorrer um array com valores numéricos e obter um novo array contendo o quadrado de cada item original. O método map() é invocado a partir de um array e recebe como parâmetro uma função de callback, que é invocada para cada item e retorna o valor do item equivalente no array resultante.</p><br>
+        <p>Para renderizar uma lista vamos precisar de um <span>array</span> e do método <span>map( )</span> para percorrer cada elemento da lista. Pode ser um array de número, de strings ou de objetos.</p><br>
+        <p>Primeiramente iremos revisar o método <span>map( )</span>. Podemos percorrer um array com valores numéricos e obter um novo array contendo o quadrado de cada item original. O método <span>map( )</span> é invocado a partir de um array e recebe como parâmetro uma função de <span>callback</span>, que é invocada para cada item e retorna o valor do item equivalente no array resultante.</p><br>
         <p><img src="img/cap09/img_1.png" alt="Imagem"></p><br>
-        <p>Para compreender melhor o método map( ), deixaremos aqui um vídeo explicativo:</p><br>
+        <p>Para compreender melhor o método <span>map( )</span>, deixaremos aqui um vídeo explicativo:</p><br>
         <p><a href="https://www.youtube.com/watch?v=mgnSSwgTiFU&list=PLm-VCNNTu3LnlPhqxx03kvjQd3qF6EBdz&index=4&ab_channel=FelipeRocha%E2%80%A2dicasparadevs" target="_blank">https://www.youtube.com/watch?v=mgnSSwgTiFU&list=PLm-VCNNTu3LnlPhqxx03kvjQd3qF6EBdz&index=4&ab_channel=FelipeRocha%E2%80%A2dicasparadevs</a></p><br>
         <p>Vamos lá !</p><br>
-        <p>O nosso projeto está com apenas um componente. O arquivo App.jsx está da seguinte forma:</p><br>
+        <p>O nosso projeto está com apenas um componente. O arquivo <span>App.jsx</span> está da seguinte forma:</p><br>
         <p><img src="img/cap09/img_2.png" alt="Imagem"></p><br>
-        <p>Dentro do componente PrimeiroComponente.jsx iremos criar uma lista antes do return.</p><br>
+        <p>Dentro do componente <span>PrimeiroComponente.jsx</span> iremos criar uma lista antes do <span>return</span>.</p><br>
         <p><img src="img/cap09/img_3.png" alt="Imagem"></p><br>
-        <p>Lembre-se que a linguagem JavaScript é executada apenas dentro das chaves. No método map( ), para cada elemento do vetor esse mesmo elemento será impresso dentro de um parágrafo.</p><br>
+        <p>Lembre-se que a linguagem JavaScript é executada apenas dentro das chaves. No método <span>map( )</span>, para cada elemento do vetor esse mesmo elemento será impresso dentro de um parágrafo.</p><br>
         <p><img src="img/cap09/img_4.png" alt="Imagem"></p><br>
         <p>No navegador teremos:</p><br>
         <p><img src="img/cap09/img_5.png" alt="Imagem"></p><br>
-        <p>Por padrão esse método no React pede a inclusão de uma propriedade. Podemos ver o aviso através do console clicando com o botão direito do mouse e selecionando Inspecionar.</p><br>
+        <p>Por padrão esse método no React pede a inclusão de uma propriedade. Podemos ver o aviso através do console clicando com o botão direito do mouse e selecionando <span>Inspecionar</span>.</p><br>
         <p><img src="img/cap09/img_6.png" alt="Imagem"></p><br>
         <p><img src="img/cap09/img_7.png" alt="Imagem"></p><br>
-        <p>Devemos incluir a propriedade key.</p><br>
+        <p>Devemos incluir a propriedade <span>key</span>.</p><br>
         <p><img src="img/cap09/img_8.png" alt="Imagem"></p><br><br>
         <div id="voltar-topo">
             <a href="#div">Voltar p/ o Topo</a>
