--- a/cap10.html
+++ b/cap10.html
@@ -16,9 +16,9 @@
         </div>
         <h2>Trabalhando com Props</h2>
         <p>Props é um recurso que utilizamos quando queremos passar valores de um componente para outro.</p><br>
-        <p>Nesse primeiro exemplo queremos passar o valor string Joca para dentro do componente PrimeiroComponente.jsx</p><br>
+        <p>Nesse primeiro exemplo queremos passar o valor string Joca para dentro do componente <span>PrimeiroComponente.jsx</span></p><br>
         <p><img src="img/cap10/img_1.png" alt="Imagem"></p><br>
-        <p>Dentro do componente filho devemos escrever props para informar que iremos usá-las. No return a usaremos entre as chaves e com o nome que declaramos no componente pai.</p><br>
+        <p>Dentro do componente filho devemos escrever <span>props</span> para informar que iremos usá-las. No <span>return</span> a usaremos entre as chaves e com o nome que declaramos no componente pai.</p><br>
         <p><img src="img/cap10/img_2.png" alt="Imagem"></p><br>
         <p>No navegador teremos:</p><br>
         <p><img src="img/cap10/img_3.png" alt="Imagem"></p><br>
@@ -34,8 +34,8 @@
         <p><img src="img/cap10/img_8.png" alt="Imagem"></p><br>
         <p>No navegador teremos:</p><br>
         <p><img src="img/cap10/img_9.png" alt="Imagem"></p><br>
-        <p>Perceba que temos o comando props escrito diversas vezes. Temos uma forma de "enxugar" essa repetição. Utilizaremos um recursos chamado Destructuring.</p><br>
-        <p>Faremos poucas mudança. Apagaremos a palavra props de todos os lugares. Dentro dos parênteses, após PrimeiroComponente, o nome dos valores fica entre chaves.</p><br>
+        <p>Perceba que temos o comando <span>props</span> escrito diversas vezes. Temos uma forma de "enxugar" essa repetição. Utilizaremos um recursos chamado <span>Destructuring</span>.</p><br>
+        <p>Faremos poucas mudança. Apagaremos a palavra <span>props</span> de todos os lugares. Dentro dos parênteses, após <span>PrimeiroComponente</span>, o nome dos valores fica entre chaves.</p><br>
         <p><img src="img/cap10/img_10.png" alt="Imagem"></p><br>
         <p>E teremos a mesma saída no navegador:</p><br>
         <p><img src="img/cap10/img_11.png" alt="Imagem"></p><br><br>
