--- a/cap10.html
+++ b/cap10.html
@@ -35,7 +35,7 @@
         <p>No navegador teremos:</p><br>
         <p><img src="img/cap10/img_9.png" alt="Imagem"></p><br>
         <p>Perceba que temos o comando <span>props</span> escrito diversas vezes. Temos uma forma de "enxugar" essa repetição. Utilizaremos um recursos chamado <span>Destructuring</span>.</p><br>
-        <p>Faremos poucas mudança. Apagaremos a palavra <span>props</span> de todos os lugares. Dentro dos parênteses, após <span>PrimeiroComponente</span>, o nome dos valores fica entre chaves.</p><br>
+        <p>Faremos poucas mudanças. Apagaremos a palavra <span>props</span> de todos os lugares. Dentro dos parênteses, após <span>PrimeiroComponente</span>, o nome dos valores fica entre chaves.</p><br>
         <p><img src="img/cap10/img_10.png" alt="Imagem"></p><br>
         <p>E teremos a mesma saída no navegador:</p><br>
         <p><img src="img/cap10/img_11.png" alt="Imagem"></p><br><br>
