--- a/cap11.html
+++ b/cap11.html
@@ -17,28 +17,28 @@
         <h2>Trabalhando com useState</h2>
         <p>O useState é um Hook do React.</p><br>
         <p>Mas o que são Hooks ?</p><br>
-        <p>Hooks são funções que permitem a você “ligar-se” a outros recursos a partir de componentes funcionais. O React fornece alguns Hooks internos como useState. Você também pode criar os seus próprios Hooks.</p><br>
+        <p>Hooks são funções que permitem a você “ligar-se” a outros recursos a partir de componentes funcionais. O React fornece alguns Hooks internos como o useState. Você também pode criar os seus próprios Hooks.</p><br>
         <p>E o que o useState faz ?</p><br>
         <p>Ele gera uma variável que pode sofrer alteração, simples assim.</p><br>
         <p>Exemplo da sua sintaxe:</p><br>
         <p>const [nome, setNome] = useState(estadoinicial)</p><br>
-        <p>O estadoinicial é o valor que a variável nome inicia. O setNome é a função que altera o valor da variável nome.</p><br>
+        <p>O <span>estadoinicial</span> é o valor que a variável <span>nome</span> inicia. O <span>setNome</span> é a função que altera o valor da variável <span>nome</span>.</p><br>
         <p>Outros exemplos:</p><br>
         <p>const [idade, setIdade] = useState(18)</p><br>
         <p>const [nome, setNome] = useState("Joca")</p><br>
         <p><span>IMPORTANTE</span>: Para usarmos o useState devemos importá-lo no componente.</p><br>
         <p><img src="img/cap11/img_1.png" alt="Imagem"></p><br>
         <p>Vamos para o exemplo prático !</p><br>
-        <p>O arquivo App.jsx se encontra dessa maneira:</p><br>
+        <p>O arquivo <span>App.jsx</span> se encontra dessa maneira:</p><br>
         <p><img src="img/cap11/img_2.png" alt="Imagem"></p><br>
-        <p>Primeiramente temos a importação do useState. Logo em seguida temos a função mudarIdade que irá alterar (através do setIdade) o valor da variável idade para 45.</p><br>
+        <p>Primeiramente temos a importação do useState. Logo em seguida temos a função <span>mudarIdade</span> que irá alterar (através do setIdade) o valor da variável <span>idade</span> para 45.</p><br>
         <p>Lembre-se, no useState temos duas partes dentro dos colchetes. A primeira parte é a variável em si e a segunda parte é a função responsável por alterar o valor da variável.</p><br>
-        <p>No useState podemos ver que a variável idade é iniciada com o valor 30.</p><br>
-        <p>Na tag button (dentro do return) temos o evento de click onClick que executa a função mudarIdade.</p><br>
+        <p>No useState podemos ver que a variável <span>idade</span> é iniciada com o valor 30.</p><br>
+        <p>Na tag <span>button</span> (dentro do return) temos o evento de click <span>onClick</span> que executa a função <span>mudarIdade</span>.</p><br>
         <p><img src="img/cap11/img_3.png" alt="Imagem"></p><br>
         <p>No navegador teremos a seguinte tela:</p><br>
         <p><img src="img/cap11/img_4.png" alt="Imagem"></p><br>
-        <p>Caso o botão seja clicado, a função mudarIdade será executada e o valor da variável idade será alterado para 45.</p><br>
+        <p>Caso o botão seja clicado, a função <span>mudarIdade</span> será executada e o valor da variável <span>idade</span> será alterado para 45.</p><br>
         <p><img src="img/cap11/img_5.png" alt="Imagem"></p><br>
         <p>Para uma maior compreensão do useState deixaremos aqui um vídeo explicativo:</p><br>
         <p><a href="https://www.youtube.com/watch?v=_ggyWGZODIM&ab_channel=ProgramadorEspartano" target="_blank">https://www.youtube.com/watch?v=_ggyWGZODIM&ab_channel=ProgramadorEspartano</a></p><br><br>
